--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "chalk": "^2.0.1",
     "chromedriver": "^2.27.2",
     "copy-webpack-plugin": "^4.0.1",
+    "compression-webpack-plugin": "1.1.1",
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.11",
     "eslint": "^4.15.0",
