--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
     "html2canvas": "^1.0.0-rc.3",
     "jsdom": "^13.2.0",
     "jsplumb": "^2.11.0",
-    "node-sass": "^4.12.0",
     "resizable-dom": "^1.0.2",
-    "sass-loader": "^7.1.0",
     "vcolorpicker": "^0.1.8",
     "vue": "^2.5.2",
     "vue-contextmenu": "^1.5.9",
@@ -68,9 +66,10 @@
     "html-webpack-plugin": "^2.30.1",
     "jest": "^22.0.4",
     "jest-serializer-vue": "^0.3.0",
+    "less": "^3.9.0",
+    "less-loader": "^5.0.0",
     "nightwatch": "^0.9.12",
     "node-notifier": "^5.1.2",
-    "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
@@ -78,7 +77,6 @@
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
-    "sass-loader": "^7.1.0",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
