--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "html2canvas": "^1.0.0-rc.3",
     "jsdom": "^13.2.0",
     "jsplumb": "^2.11.0",
+    "lodash": "^4.17.21",
     "resizable-dom": "^1.0.2",
     "vcolorpicker": "^0.1.8",
     "vue": "^2.5.2",
-    "vue-lsp": "^1.0.2",
     "vue-contextmenu": "^1.5.9",
     "vue-json-viewer": "^2.2.1",
+    "vue-lsp": "^1.0.3",
     "vue-router": "^3.0.1",
     "xmldom": "^0.1.27"
   },
